--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # forum for inclusion custom ignores
-/public/audio/
+/public/forms/*
 
 # dependencies
 /node_modules
