--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.43.4",
-    "sass-mq": "^5.0.1"
+    "sass-mq": "^5.0.1",
+    "wavesurfer.js": "^5.2.0"
   },
   "devDependencies": {
     "@types/react": "17.0.14",
